wrapping router-outlet with main tag and fixing the header

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,3 +3,7 @@
 .products{
     flex-wrap: wrap;
 }
+
+main{
+    min-height: 200px;
+}
